--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
             <div class="nav bg-black">
                 <div class="logos w-100vw">
                 <h1 class="white p15 h-crimson">BRAND NAME</h1>
-                <i class="fab fa-facebook white m40 font-size-2rem h-crimson right"></i>
-                <i class="fab fa-twitter white m40 font-size-2rem h-crimson right"></i>
-                <i class="fab fa-instagram white m40 font-size-2rem h-crimson right"></i>
+                <i class="fab fa-facebook white m30 font-size-2rem h-crimson right"></i>
+                <i class="fab fa-twitter white m30 font-size-2rem h-crimson right"></i>
+                <i class="fab fa-instagram white m30 font-size-2rem h-crimson right"></i>
             </div>
                <label for="toggle" class="font-size-3rem d-none ham white">&#9776</label>
                <!-- class ham == hamburger font  d-none == display none -->
                <input type="checkbox" id="toggle" class="d-none" >
                <div class="menu bg-black w-100vw h-100px">
-                   <a href="#" class="item m25 none font-size-2rem white h-grey right l-height70">Bussiness</a> 
+                   <a href="#" class="item m20 none font-size-2rem white h-grey right l-height70">Bussiness</a> 
                    <!-- m25 = margin:25px;     none = text-decoration: none;  -->
-                   <a href="#" class="item m25 none font-size-2rem white h-grey right l-height70">Services</a>
+                   <a href="#" class="item m20 none font-size-2rem white h-grey right l-height70">Services</a>
                    <!-- h-crimson == hover color crimson , right == float right -->
-                   <a href="#" class="item m25 none font-size-2rem white h-grey right l-height70">Learn more</a>
+                   <a href="#" class="item m20 none font-size-2rem white h-grey right l-height70">Learn more</a>
                    <!-- item is the class for anker tag -->
-                   <a href="#" class="item m25 none font-size-2rem white h-grey right l-height70">Contact US</a>
-                   <a href="#" class="item m25 none font-size-2rem right l-height70"><span class="white h-grey text-font-500">Active Link</span> </a>
+                   <a href="#" class="item m20 none font-size-2rem white h-grey right l-height70">Contact US</a>
+                   <a href="#" class="item m20 none font-size-2rem right l-height70"><span class="crimson h-grey text-font-500">Active Link</span> </a>
                </div>
            </div> 
            </header>
-
            <!-- header finished -->
+
 </body>
 </html>
